--- a/index.html
+++ b/index.html
@@ -5,9 +5,42 @@
   <!-- <meta property="og:image" content="https://raw.githubusercontent.com/ishu9bansal/rubik_cube/master/logo.png" /> -->
   <link rel="stylesheet" href="index.css">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <title>Monopoly Deal</title>
 </head>
 <body>
+  <div class="container mt-3">
+    <div class="row h-75">
+      <div id="messageBoard" class="h-100 overflow-auto">
+        <div class="card bg-info text-white">
+          <div class="card-body">Let's start Monopoly Deal!</div>
+        </div>
+        <br>
+        <div class="card bg-primary text-white">
+          <div class="card-body">Input the number of players</div>
+        </div>
+        <br>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <input id="userInput" type="text" class="form-control" placeholder="Enter your response here!">
+    </div>
+    <br>
+    <div class="monopoly-hand-cards" id="handCards">
+      <!-- <div class="hand-card">
+        <div class="hand-card-value">Deal Breaker</div>
+        <div class="hand-card-index">0</div>
+      </div>
+      
+      <div class="hand-card">
+        <div class="hand-card-value">No Card</div>
+        <div class="hand-card-index">1</div>
+      </div> -->
+    </div>
+  </div>
+  
   <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
